--- a/frontend/lib/public/locales/en-AU.json
+++ b/frontend/lib/public/locales/en-AU.json
@@ -18,5 +18,11 @@
       "favAdd": "Add to favourites",
       "favRemove": "Remove from favourites"
     }
+  },
+  "policies": {
+    "App.FavoritesEnabled": {
+      "title": "Enable favourites",
+      "help": "Controls the availability of the favourites feature in RAWeb. \n\nIf enabled, users will be able to favorite apps and desktops and access them from the favourites page. \n\nIf disabled, the favourites feature will not be available. \n\nIf not configured, each user will be able to control this setting."
+    }
   }
 }
