feat: replace old logoff page with vue-powered logoff page

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -195,5 +195,8 @@
   "username": "Username",
   "password": "Password",
   "poweredBy": "Powered by RAWeb",
-  "poweredByLearnMore": "Learn more"
+  "poweredByLearnMore": "Learn more",
+  "signOut": {
+    "title": "Signing out"
+  }
 }
