--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -198,6 +198,12 @@
       "message": "To connect to this resource via rdp://, you need the Remote Desktop Protocol Handler app installed on your device. You can get it from the Microsoft Store.",
       "message2": "Once you have installed the app, click continue.",
       "action": "Continue"
+    },
+    "getWindowsApp": {
+      "title": "Get Windows App",
+      "message": "To connect to this resource via rdp://, you need Windows App installed on your device. You can get it from the {{store}}.",
+      "message2": "Once you have installed the app, click continue.",
+      "action": "Continue"
     }
   },
   "securityError503": {
