--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -14,6 +14,9 @@
   "profile": {
     "signOut": "Sign out"
   },
+  "titlebar": {
+    "updateAvailable": "Update available"
+  },
   "favorites": {
     "title": "Favorites",
     "getStarted": "Get started with favorites",
