--- a/aspx/wwwroot/App_GlobalResources/WebResources.resx
+++ b/aspx/wwwroot/App_GlobalResources/WebResources.resx
@@ -7,10 +7,12 @@
         <value>2.0</value>
     </resheader>
     <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0,
+            Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0,
+            Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
 
     <data name="AppName" xml:space="preserve">
@@ -20,7 +22,7 @@
         <value>Powered by RAWeb</value>
     </data>
     <data name="Login_UnfoundDomain" xml:space="preserve">
-        <value>Could not find the specified domain. Please check your domain name and try again.</value>
+        <value>Could not sign in because the specified domain is not available. Please make sure the RAWeb server is connected to your domain's network and try again.</value>
     </data>
     <data name="Login_LocalMachineError" xml:space="preserve">
         <value>Something went wrong while validating credentials against the local machine. Please try again later.</value>
