--- a/aspx/wwwroot/App_GlobalResources/WebResources.resx
+++ b/aspx/wwwroot/App_GlobalResources/WebResources.resx
@@ -27,4 +27,19 @@
     <data name="Login_LocalMachineError" xml:space="preserve">
         <value>Something went wrong while validating credentials against the local machine. Please try again later.</value>
     </data>
+    <data name="Login_AccountRestrictionError" xml:space="preserve">
+        <value>There are restrictions on your account that are preventing you from signing in.</value>
+    </data>
+    <data name="Login_InvalidLogonHoursError" xml:space="preserve">
+        <value>Your account has time restrictions that keep you from signing in right now.</value>
+    </data>
+    <data name="Login_InvalidWorkstationError" xml:space="preserve">
+        <value>You are not allowed to sign in to this server.</value>
+    </data>
+    <data name="Login_PasswordExpiredError" xml:space="preserve">
+        <value>The password for this account has expired.</value>
+    </data>
+    <data name="Login_AccountDisabledError" xml:space="preserve">
+        <value>Your account is currently disabled.</value>
+    </data>
 </root>
