feat: add a change password button to the profile menu

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -12,6 +12,7 @@
     "once": "Just once"
   },
   "profile": {
+    "changePassword": "Change a password",
     "signOut": "Sign out"
   },
   "titlebar": {
