feat: check for _msradc DNS TXT record and show an email address as a connection option in the webfeed section of settings if the record exists and matches the current URL
Resolves #111

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -81,7 +81,8 @@
     },
     "workspaceUrl": {
       "title": "Workspace URL",
-      "copy": "Copy workspace URL"
+      "copy": "Copy workspace URL",
+      "copyEmail": "Copy workspace email"
     },
     "about": {
       "title": "About",
