feat: enable authenticaiton via the API, with anonymous auth support via policy `App.Auth.Anonymous`

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -244,6 +244,7 @@
     "captionOn": "on",
     "incorrectUsernameOrPassword": "Incorrect username or password.",
     "continue": "Continue",
+    "continueAnonymous": "Skip",
     "changePasswordButton": "Change your password",
     "securityError503": {
       "title": "Your credentials are at risk",
