feat: add copy to clipboard button to code blocks

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -280,5 +280,7 @@
     "passwordsDoNotMatch": "Passwords do not match.",
     "submit": "Submit",
     "cancel": "Cancel"
-  }
+  },
+  "copyToClipboard": "Copy to clipboard",
+  "copiedToClipboard": "Copied to clipboard"
 }
