--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -4,6 +4,8 @@
   "device": "device",
   "app": "app",
   "application": "application",
+  "pleaseWait": "Please wait…",
+  "unknownError": "An unknown error occurred.",
   "dialog": {
     "close": "Close",
     "cancel": "Cancel",
@@ -283,5 +285,13 @@
     "cancel": "Cancel"
   },
   "copyToClipboard": "Copy to clipboard",
-  "copiedToClipboard": "Copied to clipboard"
+  "copiedToClipboard": "Copied to clipboard",
+  "registryApps": {
+    "manager": {
+      "open": "Manage registry RemoteApps",
+      "title": "Registry RemoteApps Manager",
+      "add": "Add new RemoteApp",
+      "refresh": "Refresh list"
+    }
+  }
 }
