feat: add icon picker/selector

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -304,6 +304,9 @@
         "configureFileTypeAssociations": "Configure file type associations",
         "managePermissions": "Manage permissions",
         "saveError": "Error saving RemoteApp"
+      },
+      "iconPicker": {
+        "title": "Select Icon"
       }
     },
     "properties": {
