feat: add dialog for listing available apps from the OS where RAWeb Server is installed

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -307,6 +307,11 @@
       },
       "iconPicker": {
         "title": "Select Icon"
+      },
+      "discover": {
+        "title": "Add new RemoteApp",
+        "manualAdd": "Add RemoteApp manually",
+        "refresh": "Refresh"
       }
     },
     "properties": {
