feat: add global confirmation dialog that can be launched with `showConfirm`
This dialog is similar in concept to window.confirm. However, instead of being blocking, it is a promise that can resolve (confirm is clicked) or rejects (cancel was clicked).

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -11,7 +11,9 @@
     "cancel": "Cancel",
     "ok": "OK",
     "always": "Always",
-    "once": "Just once"
+    "once": "Just once",
+    "yes": "Yes",
+    "no": "No"
   },
   "profile": {
     "changePassword": "Change a password",
