feat: add a remove/delete button for registry RemoteApps

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -299,13 +299,15 @@
         "sections": {
           "application": "Application",
           "icon": "Icon",
-          "advanced": "Advanced"
+          "advanced": "Advanced",
+          "dangerZone": "Danger zone"
         },
         "title": "Properties",
         "selectIcon": "Select icon",
         "configureFileTypeAssociations": "Configure file type associations",
         "managePermissions": "Manage permissions",
-        "saveError": "Error saving RemoteApp"
+        "saveError": "Error saving RemoteApp",
+        "remove": "Remove RemoteApp"
       },
       "iconPicker": {
         "title": "Select Icon"
@@ -318,6 +320,10 @@
       "create": {
         "title": "Add new RemoteApp",
         "409": "A RemoteApp with this registry key already exists. Please choose a different registry key."
+      },
+      "remove": {
+        "title": "Remove {{app_name}}?",
+        "message": "This action cannot be undone."
       }
     },
     "properties": {
