feat: add dialog for adding and removing file type associations and their icons

--- a/frontend/lib/public/locales/en.json
+++ b/frontend/lib/public/locales/en.json
@@ -327,6 +327,13 @@
       "remove": {
         "title": "Remove {{app_name}}?",
         "message": "This action cannot be undone."
+      },
+      "fileTypeAssociationsEditor": {
+        "title": "{{app_name}} File Type Associations",
+        "add": "Add association",
+        "remove": "Remove",
+        "removeAll": "Remove all",
+        "selectIcon": "Select icon"
       }
     },
     "properties": {
